[package]
name = "wen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rustls-native-certs = "0.6"
hickory-resolver = { version = "0.24", features = [
    "dns-over-rustls",
    "dns-over-https-rustls",
    "native-certs"
] }

anyhow = "1"
thiserror = "1"

log = "0.4"
